# m374m

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md  readme.org  todo.org
homeworks/: CMakeLists.txt
homeworks/hw1/: CMakeLists.txt  hw1.tex
homeworks/hw1/doc/: CMakeLists.txt  writeup.tex
homeworks/hw1/resources/: prog1_fig1-inc.eps  prog1_fig1.tex  prog1_fig2-inc.eps  prog1_fig2.tex
homeworks/hw1/src/: CMakeLists.txt  generate_minilab.m  pendulum.m  program1.m
homeworks/hw10/: CMakeLists.txt  hw10.tex
homeworks/hw11/: CMakeLists.txt  hw11.tex
homeworks/hw12/: CMakeLists.txt  hw12.tex
homeworks/hw2/: CMakeLists.txt  hw2.tex
homeworks/hw2/doc/: CMakeLists.txt  hw2.tex
homeworks/hw2/resources/: prog2_fig1-inc.eps  prog2_fig1.tex  prog2_fig2-inc.eps  prog2_fig2.tex
homeworks/hw2/src/: CMakeLists.txt  generate_minilab.m  program2.m  rtank.m  rtank_approx.m
homeworks/hw3/: CMakeLists.txt  hw3.tex
homeworks/hw3/doc/: CMakeLists.txt  hw3.tex
homeworks/hw3/resources/: prog2_fig2.tex  prog3_fig1-inc.eps  prog3_fig1.tex  prog3_fig2-inc.eps  prog3_fig2.tex  prog3_fig3-inc.eps  prog3_fig3.tex  prog3_fig4-inc.eps  prog3_fig4.tex  prog3_fig5-inc.eps  prog3_fig5.tex  scratch.nb
homeworks/hw3/src/: CMakeLists.txt  generate_minilab.m  plant.m  program3.m
homeworks/hw4/: CMakeLists.txt  hw4.tex
homeworks/hw4/doc/: CMakeLists.txt  hw4.tex
homeworks/hw5/: CMakeLists.txt  hw5.tex
homeworks/hw6/: CMakeLists.txt  hw6.tex
homeworks/hw7/: CMakeLists.txt  hw7.tex
homeworks/hw8/: CMakeLists.txt  hw8.tex
homeworks/hw9/: CMakeLists.txt  hw9.tex
(+281 files in other folders)
